--- a/frontend/config.json
+++ b/frontend/config.json
@@ -1,5 +1,5 @@
 {
     "DEV": "http://localhost:5050/api",
     "PROD": "https://lx7y4kjoag.execute-api.us-east-1.amazonaws.com/hex/api",
-    "TYPE": "PROD"
+    "TYPE": "DEV"
 }
